--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Wechselkurs Monatsübersicht</title>
+  <title data-i18n="title">Wechselkurs Monatsübersicht</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -32,38 +32,37 @@
 
 <body>
 <div id="splash" class="splash"></div>
-
   <div class="controls">
         <button id="toggleBtn">EUR ⇄ TRY</button><input id="amount" type="number" value="1" step="10">
-    <button id="showBtn">Göster</button>
-    <button id="presetToday">Bugün</button>
-    <button id="presetMonth">Son bir Ay</button>
-    <button id="presetYear">Son 12 Ay</button>
+  <button id="showBtn" data-i18n="show">Anzeigen</button>
+  <button id="presetToday" data-i18n="today">Heute</button>
+  <button id="presetMonth" data-i18n="month">Monat</button>
+  <button id="presetYear" data-i18n="year">12 Monate</button>
 
     <input id="dateFrom" type="date">
     <input id="dateTo" type="date">
-    <button id="darkModeBtn">Dark Mode</button>
-    <button id="pdfBtn">PDF</button><button id="printBtn">Yazdır</button>
-
+  <button id="darkModeBtn" data-i18n="darkmode">Dark Mode</button>
+  <button id="pdfBtn" data-i18n="pdf">PDF</button>
+  <button id="printBtn" data-i18n="print">Drucken</button>
   </div>
 
   <h2 id="yearTitle"></h2>
 
-  <div id="loader" class="hidden">Yükleniyor …</div>
+  <div id="loader" class="hidden" data-i18n="loading">Laden …</div>
 
   <div class="data-layout">
     <div class="table-container">
       <table>
         <thead>
           <tr>
-            <th>Ay</th>
+            <th data-i18n="month_col">Monat</th>
             <th id="colFrom">EUR</th>
             <th id="colTo">TRY</th>
           </tr>
         </thead>
         <tbody id="tableBody">
           <tr>
-            <td colspan="3" class="empty">Döviz kurları alinamadı!</td>
+            <td colspan="3" class="empty" data-i18n="nodata">Keine Daten geladen</td>
           </tr>
         </tbody>
       </table>
@@ -78,7 +77,7 @@
             <!-- wird von fs.js automatisch gesetzt -->
         </div>
     </footer>
-
+    
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="java/funkScript.js"></script>
 </body>
