--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 </head>
 
 <body>
-<div id="splash" class="splash"></div>
+<div id="splash" class="splash">
+  <img src="Logo.png" alt="DiloUsta58" class="splash-logo">
+</div>
+
   <div class="controls">
         <button id="toggleBtn">EUR ⇄ TRY</button><input id="amount" type="number" value="1" step="10">
   <button id="showBtn" data-i18n="show">Anzeigen</button>
