--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  </div>
      <footer>
         <div id="kimlik" data-i18n="footer_author">© Dilaver Bölükbaşı</div>
-        <div id="lastUpdate" data-i18n="footer_lastupdate">
+        <div id="updated" data-i18n="footer_lastupdate">
             <!-- wird von fs.js automatisch gesetzt -->
         </div>
     </footer>
