--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 <body>
 <div id="splash" class="splash"></div>
   <div class="controls">
-        <button id="toggleBtn">EUR ⇄ TRY</button><input id="amount" type="number" value="1" step="10">
+   <button id="langToggle">DE / TR</button>
+
+  <button id="toggleBtn">EUR ⇄ TRY</button><input id="amount" type="number" value="1" step="10">
   <button id="showBtn" data-i18n="show">Anzeigen</button>
   <button id="presetToday" data-i18n="today">Heute</button>
   <button id="presetMonth" data-i18n="month">Monat</button>
