--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 </head>
 
 <body>
+<h1 id="uberschrift" data-i18n="Baslik"></h1>
+
 <h2 id="yearTitle"></h2>
 
 <div id="splash" class="splash"></div>
@@ -94,8 +96,9 @@
                 <!-- jsPDF -->
         <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jspdf-autotable@3.5.29/dist/jspdf.plugin.autotable.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                 <!-- Chart.js -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+                <!-- Mein Script.js -->
         <script src="java/funkScript.js"></script>
 </body>
 </html>
