--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <script>
+    <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
-          navigator.serviceWorker.register("sw.js");
+          navigator.serviceWorker.register("sw.js", {
+            updateViaCache: "none"
+          });
         });
       }
-</script>
-
+    </script>
 
 </head>
 
