--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 </head>
 
 <body>
+
+  <div id="sw-update-banner" style="display:none">
+  <span>Neue Version verfügbar</span>
+  <button id="sw-update-btn">Aktualisieren</button>
+</div>
+
+
+
 <h1 id="uberschrift" data-i18n="Baslik"></h1>
 
 <h2 id="yearTitle"></h2>
